--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "realrashid/sweet-alert": "^3.2",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
